--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <div class="shadow-lg d-block shadow text-center" style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
-                <form style="padding-top: 70px;" method="post" action="/post">
+                <form style="padding-top: 70px;" method="post" action="/post" enctype="multipart/form-data">
                     <div class="form-group">
                         <h1 class="text-center" style="color: rgb(1,1,1);font-weight: bold;">Đăng Bài Confession</h1>
                     </div>
@@ -12,7 +12,7 @@
                         </div>
                     <% } %>
                     <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Nội dung muốn đăng ?" name="content" style="width: 50%;margin-left: 25%;min-height: 200px;"></textarea></div>
-                    <div class="form-group"><input type="file" name="image"></div>
+                    <div class="form-group"><input type="file" accept="image/*" name="image"></div>
                     <div class="form-group"><input type="checkbox" name="check"> Tôi đã đọc và đồng ý với nội quy đăng bài cfs</div>
                     <div class="form-group"><button class="btn btn-dark btn-lg" type="submit" style="width: 50%;">Send</button></div>
                 </form>
