--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada">
   <link rel="stylesheet" href="assets/css/styles.min.css">
+  <link rel="shortcut icon" href="assets/img/favicon.png">
 </head>
 
 <body id="page-top">
