--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,7 +1,7 @@
 <!-- Start: Navigation with Button -->
 <div>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="height: 64px;background-color: rgb(39,52,55);">
-        <div class="container"><a class="navbar-brand" href="/" style="width: 176px;height: 121px;"><img src="assets/img/logo.png" style="width: 94%;height: 103px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="/" style="width: 176px;height: 121px;"><img src="assets/img/logo.png" style="padding-top: 27px;width: 70%;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="font-family: 'Pattaya', sans-serif;">
                 <ul class="nav navbar-nav mr-auto"></ul>
                 <span class="navbar-text actions">
