--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,8 +1,14 @@
 <!-- Start: Navigation with Button -->
 <div>
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="height: 64px;background-color: rgb(39,52,55);">
-        <div class="container"><a class="navbar-brand" href="/" style="width: 176px;height: 121px;"><img src="assets/img/logo.png" style="width: 94%;height: 103px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1" style="font-family: 'Pattaya', sans-serif;">
+    <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="height: 101px;background-color: rgb(39,52,55);padding: 0 1.5rem;">
+        <div class="container"><a class="navbar-brand" href="/" style="width: 153px;height: 101px;"><img src="assets/img/logo.png" style="width: 100%;height: 92px;margin: 0px;padding: 0px;"></a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1">
+                <span class="sr-only" >Toggle navigation</span>
+                <span class="text-white" style="width: 106%">
+                    <img src="assets/img/menu.png" alt="nope">
+                </span>
+            </button>
+            <div class="collapse navbar-collapse text-right" id="navcol-1" style="font-family: 'Pattaya', sans-serif;">
                 <ul class="nav navbar-nav mr-auto"></ul>
                 <span class="navbar-text actions">
                 <% if (locals.user) { %>
