Phan trang danh sach bai viet

--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,9 +1,9 @@
  <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="height: 101px;background-color: rgb(39,52,55);padding: 0 1.5rem;">
-        <div class="container"><a class="navbar-brand" href="/" style="width: 176px;height: 121px;"><img src="assets/img/logo.png" style="padding-top: 27px;width: 70%;"></a>
+        <div class="container"><a class="navbar-brand" href="/" style="width: 176px;height: 121px;"><img src="/assets/img/logo.png" style="padding-top: 27px;width: 70%;"></a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1">
                 <span class="sr-only" >Toggle navigation</span>
                 <span class="text-white" style="width: 106%">
-                    <img src="assets/img/menu.png" alt="nope">
+                    <img src="/assets/img/menu.png" alt="nope">
                 </span>
             </button>
             <div class="collapse navbar-collapse" id="navcol-1" style="font-family: 'Pattaya', sans-serif;">
