--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title><%= locals.title ? title : 'TDMU Confession' %></title>
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada|Pattaya">
-  <link rel="stylesheet" href="assets/css/styles.min.css">
-  <link rel="shortcut icon" href="assets/img/favicon.png">
+  <link rel="stylesheet" href="/assets/css/styles.min.css">
+  <link rel="shortcut icon" href="/assets/img/favicon.png">
 </head>
 
 <body id="page-top">
@@ -22,7 +22,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<script src="assets/js/script.min.js"></script>
+<script src="/assets/js/script.min.js"></script>
 </body>
 
 </html>
