--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -21,7 +21,7 @@
                     <tbody>
                     <%
                         if (locals.posts) {
-                            var i = 1;
+                            var i = (current == 1) ? 1 : (current - 1) * 10 + 1;
                             posts.forEach(post => {
                     %>
                         <tr>
@@ -39,6 +39,39 @@
                         } %>
                     </tbody>
                 </table>
+
+
+                <% if (locals.pages && pages > 0) { %>
+                    <ul class="pagination">
+                        <% if (current == 1) { %>
+                            <li class="page-item disabled"><a class="page-link">Trang Đầu</a></li>
+                        <% } else { %>
+                            <li class="page-item"><a class="page-link" href="/posts/1">Trang Đầu</a></li>
+                        <% } %>
+                        <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+                        <% if (i !== 1) { %>
+                            <li class="page-item disabled"><a class="page-link">...</a></li>
+                        <% } %>
+                        <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
+                            <% if (i == current) { %>
+                                <li class="page-item active"><a class="page-link"><%= i %></a></li>
+                            <% } else { %>
+                                <li class="page-item "><a class="page-link"href="/posts/<%= i %>"><%= i %></a></li>
+                            <% } %>
+                            <% if (i == Number(current) + 4 && i < pages) { %>
+                                <li class="page-item disabled"><a class="page-link">...</a></li>
+                            <% } %>
+                        <% } %>
+                        <% if (current == pages) { %>
+                            <li class="page-item disabled"><a class="page-link">Trang Cuối</a></li>
+                        <% } else { %>
+                            <li class="page-item"><a class="page-link" href="/posts/<%= pages %>">Trang Cuối</a></li>
+                        <% } %>
+                    </ul>
+                <% } %>
+
+
+
             </div>
         </div>
     </div>
