--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
     <hr class="star-light mb-5">
     <div class="row">
       <div class="col-lg-4 ml-auto">
-        <p class="lead">Đây là ngôi trường do hưng phạm là hiệu trưởng, tụi mày tuoir lozz</p>
+        <p class="lead">Chào mừng các cậu đã đến với Confession của Thủ Dầu Một University! Chỉ có vậy thôi, chẳng có gì đặc sắc hơn đâu, lướt chỗ khác đi :v</p>
       </div>
       <div class="col-lg-4 mr-auto">
         <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
