--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
         <p class="lead">Chào mừng các cậu đã đến với Confession của Thủ Dầu Một University! Chỉ có vậy thôi, chẳng có gì đặc sắc hơn đâu, lướt chỗ khác đi :v</p>
       </div>
       <div class="col-lg-4 mr-auto">
-        <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+        <p class="lead">Chào mừng các cháu đã đến với channel của ông Hưng Vê-lốcccc. Hôm nay ông Hưng sẽ dẫn các cháu đi thăm ngôi trường siêu to khổng lồ của ông Hưng nha!! Đã 20 nôi bánh trưng dồi! Ông không ngờ là ông có thể làm hiệu trưởng của trường siêu to khổng lồ như thế này, đấy, đấy!! *chỉ* *chỉ*.</p>
       </div>
     </div>
   </div>
