--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<>
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title><%= locals.title ? title : 'TDMU Confession' %></title>
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/assets/css/styles.min.css">
   <link rel="stylesheet" href="/assets/css/buttonMenu.css">
   <link rel="shortcut icon" href="/assets/img/favicon.png">
-
+</head>
 <body id="page-top">
 <% include layouts/header%>
 <%- body %>
