--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,37 +14,37 @@
         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-toggle="modal">
           <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-          </div><img class="img-fluid" src="assets/img/portfolio/cabin.png"></a>
+          </div><img class="img-fluid" src="/assets/img/portfolio/hinh-1.jpg"></a>
       </div>
       <div class="col-md-6 col-lg-4">
         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-toggle="modal">
           <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-          </div><img class="img-fluid" src="assets/img/portfolio/cake.png"></a>
+          </div><img class="img-fluid" src="/assets/img/portfolio/hinh-2.jpg"></a>
       </div>
       <div class="col-md-6 col-lg-4">
         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-3" data-toggle="modal">
           <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-          </div><img class="img-fluid" src="assets/img/portfolio/circus.png"></a>
+          </div><img class="img-fluid" src="/assets/img/portfolio/hinh-3.jpg"></a>
       </div>
       <div class="col-md-6 col-lg-4">
         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-4" data-toggle="modal">
           <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-          </div><img class="img-fluid" src="assets/img/portfolio/game.png"></a>
+          </div><img class="img-fluid" src="/assets/img/portfolio/hinh-4.jpg"></a>
       </div>
       <div class="col-md-6 col-lg-4">
         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-toggle="modal">
           <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-          </div><img class="img-fluid" src="assets/img/portfolio/safe.png"></a>
+          </div><img class="img-fluid" src="/assets/img/portfolio/hinh-5.jpg"></a>
       </div>
       <div class="col-md-6 col-lg-4">
         <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-6" data-toggle="modal">
           <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
             <div class="my-auto portfolio-item-caption-content w-100 text-center text-white"><i class="fa fa-search-plus fa-3x"></i></div>
-          </div><img class="img-fluid" src="assets/img/portfolio/submarine.png"></a>
+          </div><img class="img-fluid" src="/assets/img/portfolio/hinh-6.jpg"></a>
       </div>
     </div>
   </div>
@@ -72,15 +72,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/cabin.png">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                itaque. Nam.</p>
+              <h2 class="text-uppercase text-secondary mb-0">Hồ cá</h2>
+              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-1.jpg">
+              <p class="mb-5">Mô tả 1 x3.14!!</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
+      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Đóng</a></div>
     </div>
   </div>
 </div>
@@ -92,15 +91,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/cake.png">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                itaque. Nam.</p>
+              <h2 class="text-uppercase text-secondary mb-0">vườn học tập</h2>
+              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-2.jpg">
+              <p class="mb-5">Mô tả 2x3.14!!</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
+      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>Đóng</a></div>
     </div>
   </div>
 </div>
@@ -112,15 +110,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/circus.png">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                itaque. Nam.</p>
+              <h2 class="text-uppercase text-secondary mb-0">Hành lang</h2>
+              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-3.jpg">
+              <p class="mb-5">Mô tả 3x3.14!!</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
+      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>Đóng</a></div>
     </div>
   </div>
 </div>
@@ -132,15 +129,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/game.png">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                itaque. Nam.</p>
+              <h2 class="text-uppercase text-secondary mb-0">Lối đi</h2>
+              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-4.jpg">
+              <p class="mb-5">Mô tả 4x3.14!!</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
+      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>Sân trường 1</a></div>
     </div>
   </div>
 </div>
@@ -152,15 +148,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/safe.png">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                itaque. Nam.</p>
+              <h2 class="text-uppercase text-secondary mb-0">Sân trường 1</h2>
+              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-5.jpg">
+              <p class="mb-5">Mô tả 5x4.14!!</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
+      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>Đóng</a></div>
     </div>
   </div>
 </div>
@@ -172,15 +167,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/submarine.png">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur
-                itaque. Nam.</p>
+              <h2 class="text-uppercase text-secondary mb-0">Sân trường 2</h2>
+              <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-6.jpg">
+              <p class="mb-5">Mô tả 6x3.14!!</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>&nbsp;Close Project</a></div>
+      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>Đóng</a></div>
     </div>
   </div>
 </div>
