--- a/views/member/posts.ejs
+++ b/views/member/posts.ejs
@@ -1,21 +1,18 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="shadow-lg d-block shadow text-center" style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
-                <h1>Danh Sách Bài Đã Đăng
-                <a href="/post">
-                    <button class="btn btn-info">Đăng Bài Mới</button>
-                </a></h1>
-                <br/>
-                <table class="table">
-                    <thead class="thead-light">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Nội dung</th>
-                        <th scope="col">Hình ảnh</th>
-                        <th scope="col">Trạng thái</th>
-                        <th scope="col">Ghi chú</th>
-                        <th scope="col">Thao tác</th>
+<div class="limiter" style="font-family: 'Lobster', cursive;">
+    <div class="container-table100">
+        <div class="wrap-table100">
+            <div class="table100">
+                <h1 style="text-align: center; font-size: 60px; font-family: 'Lobster', cursive;" >Bài đã đăng</h1>
+                <br>
+                <table>
+                    <thead>
+                    <tr class="table100-head">
+                        <th class="column1" style="font-family: 'Lobster', cursive;">STT</th>
+                        <th class="column2" style="font-family: 'Lobster', cursive;">Nội dung</th>
+                        <th class="column3" style="font-family: 'Lobster', cursive;">Hình ảnh</th>
+                        <th class="column4" style="font-family: 'Lobster', cursive;">Trạng thái</th>
+                        <th class="column5" style="font-family: 'Lobster', cursive;">Ghi chú</th>
+                        <th class="column6" style="font-family: 'Lobster', cursive;">Thao tác</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -25,21 +22,26 @@
                             posts.forEach(post => {
                     %>
                         <tr>
-                            <th scope="row"><%= i %></th>
-                            <td><%= post.content.length > 30 ? post.content.substring(0, 30) + '...' : post.content %></td>
-                            <td><%= post.image.length %></td>
-                            <td><%- statusList[post.status] %></td>
-                            <td><%= post.note %></td>
-                            <td>
-                                <button class="btn btn-warning"><i class="fa fa-pencil-square-o"></i></button>
-                                <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                            <td class="column1"><%= i %></td>
+                            <td class="column2"><%= post.content.length > 20 ? post.content.substring(0, 20) + '...' : post.content %></td>
+                            <td class="column3"><%= post.image.length %></td>
+                            <td class="column4"><%- statusList[post.status] %></td>
+                            <td class="column5">&emsp;<%= post.note %></td>
+                            <td class="column6">
+                                <button class="btn-1 btn-1-success"><i class="fas fa-check"></i></button>
+                                <button class="btn-1 btn-1-warning"><i class="fa fa-edit"></i></button>
+                                <button class="btn-1 btn-1-danger"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
                     <%   i++;});
-                        } %>
+                    } %>
                     </tbody>
                 </table>
-
+            </div>
+        </div>
+    </div>
+</div>
+<!-- ------------------- -->
 
                 <% if (locals.pages && pages > 0) { %>
                     <ul class="pagination">
@@ -70,9 +72,3 @@
                     </ul>
                 <% } %>
 
-
-
-            </div>
-        </div>
-    </div>
-</div>
