--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="/assets/css/buttonMenu.css">
   <link rel="shortcut icon" href="/assets/img/favicon.png">
   <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/mainpost.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body id="page-top">
