--- a/views/member/post.ejs
+++ b/views/member/post.ejs
@@ -22,3 +22,47 @@
         </div>
     </div>
 </div>
+
+<div class="container-contact100" style="font-family: 'Lobster', cursive;">
+    <div class="wrap-contact100">
+        <form class="contact100-form validate-form">
+				<span class="contact100-form-title" style="font-family: 'Lobster', cursive;">
+					Đăng Bài
+				</span>
+            <% if (locals.message) { %>
+                <% message.forEach(mess => { %>
+                    <div class="alert alert-info">
+                        <%= mess.msg %>
+                    </div>
+                <%  }); %>
+            <% } %>
+            <div class="wrap-input100 validate-input" data-validate = "Message is required">
+                <span class="label-input100" style="font-family: 'Lobster', cursive;">Nội dung</span>
+                <textarea style="font-family: 'Lobster', cursive;" class="input100" name="message" placeholder="Nội dung ở đây..."></textarea>
+                <span class="focus-input100"></span>
+            </div>
+
+            <div class="custom-file mb-3">
+                <input type="file" class="custom-file-input" id="customFile" name="filename">
+                <label class="custom-file-label" for="customFile">Chọn hình ảnh</label>
+            </div>
+
+            <div class="custom-control custom-checkbox mb-3">
+                <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
+                <label class="custom-control-label" for="customCheck">Bạn có đồng ý với điều khoản của Confession?</label>
+            </div>
+
+            <div class="container-contact100-form-btn">
+                <div class="wrap-contact100-form-btn">
+                    <div class="contact100-form-bgbtn"></div>
+                    <button class="contact100-form-btn">
+							<span>
+								Gửi
+								<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
+							</span>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
