--- a/views/member/post.ejs
+++ b/views/member/post.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">
     <div class="row">
         <div class="col">
             <div class="shadow-lg d-block shadow text-center" style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
@@ -21,11 +21,11 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="container-contact100" style="font-family: 'Lobster', cursive;">
     <div class="wrap-contact100">
-        <form class="contact100-form validate-form">
+        <form class="contact100-form validate-form" method="post" action="/post" enctype="multipart/form-data">
 				<span class="contact100-form-title" style="font-family: 'Lobster', cursive;">
 					Đăng Bài
 				</span>
@@ -55,7 +55,7 @@
             <div class="container-contact100-form-btn">
                 <div class="wrap-contact100-form-btn">
                     <div class="contact100-form-bgbtn"></div>
-                    <button class="contact100-form-btn">
+                    <button class="contact100-form-btn" type="submit">
 							<span>
 								Gửi
 								<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
