--- a/views/member/post.ejs
+++ b/views/member/post.ejs
@@ -1,28 +1,3 @@
-<!--<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="shadow-lg d-block shadow text-center" style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
-                <form style="padding-top: 70px;" method="post" action="/post" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <h1 class="text-center" style="color: rgb(1,1,1);font-weight: bold;">Đăng Bài Confession</h1>
-                    </div>
-                    <% if (locals.message) { %>
-                        <% message.forEach(mess => { %>
-                        <div class="alert alert-info">
-                            <%= mess.msg %>
-                        </div>
-                        <%  }); %>
-                    <% } %>
-                    <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Nội dung muốn đăng ?" name="content" id="content" style="width: 50%;margin-left: 25%;min-height: 200px;"></textarea></div>
-                    <div class="form-group"><input type="file" accept="image/*" name="image"></div>
-                    <div class="form-group"><input type="checkbox" name="check" id="check"> Tôi đã đọc và đồng ý với nội quy đăng bài cfs</div>
-                    <div class="form-group"><button class="btn btn-dark btn-lg" type="submit" style="width: 50%;">Send</button></div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div> -->
-
 <div class="container-contact100" style="font-family: 'Lobster', cursive;">
     <div class="wrap-contact100">
         <form class="contact100-form validate-form" method="post" action="/post" enctype="multipart/form-data">
@@ -38,17 +13,17 @@
             <% } %>
             <div class="wrap-input100 validate-input" data-validate = "Message is required">
                 <span class="label-input100" style="font-family: 'Lobster', cursive;">Nội dung</span>
-                <textarea style="font-family: 'Lobster', cursive;" class="input100" name="message" placeholder="Nội dung ở đây..."></textarea>
+                <textarea style="font-family: 'Lobster', cursive;" class="input100" name="content" placeholder="Nội dung ở đây..."></textarea>
                 <span class="focus-input100"></span>
             </div>
 
             <div class="custom-file mb-3">
-                <input type="file" class="custom-file-input" id="customFile" name="filename">
+                <input type="file" accept="image/*" class="custom-file-input" id="customFile" name="image">
                 <label class="custom-file-label" for="customFile">Chọn hình ảnh</label>
             </div>
 
             <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
+                <input type="checkbox" class="custom-control-input" id="customCheck" name="check">
                 <label class="custom-control-label" for="customCheck">Bạn có đồng ý với điều khoản của Confession?</label>
             </div>
 
