--- a/views/member/post.ejs
+++ b/views/member/post.ejs
@@ -1,19 +1,19 @@
 <div class="container-contact100" style="font-family: 'Lobster', cursive;">
     <div class="wrap-contact100">
-        <form class="contact100-form validate-form" method="post" action="/post" enctype="multipart/form-data">
+        <form class="contact100-form validate-form" method="post" action="<%= locals.post ? '/editpost/' + post._id : '/post' %>" enctype="multipart/form-data">
 				<span class="contact100-form-title" style="font-family: 'Lobster', cursive;">
-					Đăng Bài
+                    <%= locals.post ? 'Sửa Bài Đăng' : 'Đăng Bài' %>
 				</span>
             <% if (locals.message) { %>
                 <% message.forEach(mess => { %>
-                    <div class="alert alert-info">
+                    <div class="alert alert-<%= mess.type ? mess.type : 'warning' %>">
                         <%= mess.msg %>
                     </div>
                 <%  }); %>
             <% } %>
             <div class="wrap-input100 validate-input" data-validate = "Message is required">
                 <span class="label-input100" style="font-family: 'Lobster', cursive;">Nội dung</span>
-                <textarea style="font-family: 'Lobster', cursive;" class="input100" name="content" placeholder="Nội dung ở đây..."></textarea>
+                <textarea style="font-family: 'Lobster', cursive;" class="input100" name="content" placeholder="Nội dung ở đây..."><% if (locals.post) { %><%= post.content %><% }%></textarea>
                 <span class="focus-input100"></span>
             </div>
 
@@ -32,7 +32,7 @@
                     <div class="contact100-form-bgbtn"></div>
                     <button class="contact100-form-btn" type="submit">
 							<span>
-								Gửi
+								<%= locals.post ? 'Sửa Bài' : 'Gửi' %>
 								<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 							</span>
                     </button>
