--- a/views/admin/listPost.ejs
+++ b/views/admin/listPost.ejs
@@ -38,7 +38,7 @@
 
 
                 <% if (locals.pages && pages > 0) { %>
-                    <ul class="pagination">
+                    <ul class="pagination" style="justify-content: center">
                         <% if (current == 1) { %>
                             <li class="page-item disabled"><a class="page-link">Trang Đầu</a></li>
                         <% } else { %>
