--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,12 +1,12 @@
 <footer class="footer text-center">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 mb-5 mb-lg-0">
-                <h4 class="text-uppercase mb-4" style="font-family: Lemonada, cursive;">địa chỉ</h4>
-                <p style="font-family: Lemonada, cursive;">06 Trần Văn Ơn, Phú Hòa, Thủ Dầu Một, Bình Dương</p>
+            <div class="col-md-6 mb-5 mb-lg-0" style="font-family: 'Quicksand', sans-serif;">
+                <h4 class="text-uppercase mb-4">địa chỉ</h4>
+                <p">06 Trần Văn Ơn, Phú Hòa, Thủ Dầu Một, Bình Dương</p>
             </div>
             <div class="col-md-6 mb-5 mb-lg-0">
-                <h4 class="text-uppercase" style="font-family: Lemonada, cursive;">liên hệ</h4>
+                <h4 class="text-uppercase" style="font-family: 'Quicksand', sans-serif;">liên hệ</h4>
                 <ul class="list-inline">
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-facebook fa-fw"></i></a></li>
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-google-plus fa-fw"></i></a></li>
@@ -17,6 +17,6 @@
         </div>
     </div>
 </footer>
-<div class="copyright py-4 text-center text-white">
+<div class="copyright py-4 text-center text-white" style="font-family: 'Quicksand', sans-serif;">
     <div class="container"><small>Copyright © &nbsp;ChickenFlyStudio</small></div>
 </div>
