--- a/views/member/posts.ejs
+++ b/views/member/posts.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/assets/css/main.css">
 <div class="limiter" style="font-family: 'Lobster', cursive;">
     <div class="container-table100">
         <div class="wrap-table100">
@@ -55,9 +56,9 @@
 
                 <br/>
                 <% if (locals.pages && pages > 0) { %>
-                    <ul class="pagination" style="justify-content: center;">
+                    <ul class="pagination" style="justify-content: center; ">
                         <% if (current == 1) { %>
-                            <li class="page-item disabled"><a class="page-link">Trang Đầu</a></li>
+                            <li class="page-item disabled" style=""><a class="page-link">Trang Đầu</a></li>
                         <% } else { %>
                             <li class="page-item"><a class="page-link" href="/posts/1">Trang Đầu</a></li>
                         <% } %>
