--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
     </div>
   </div>
 </section>
-<section id="about" class="bg-primary text-white mb-0" style="font-family: 'Quicksand', sans-serif;>
+<section id="about" class="bg-primary text-white mb-0" style="font-family: 'Quicksand', sans-serif;">
   <div class="container">
     <h2 class="text-uppercase text-center text-white">tdmu</h2>
     <hr class="star-light mb-5" >
@@ -133,7 +133,6 @@
           </div>
         </div>
       </div>
-      <div class="modal-footer pb-5"><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="#"><i class="fa fa-close"></i>Sân trường 1</a></div>
     </div>
   </div>
 </div>
