Deloy server Heroku

--- a/views/member/posts.ejs
+++ b/views/member/posts.ejs
@@ -1,8 +1,9 @@
+<link rel="stylesheet" href="/assets/css/main.css">
 <div class="limiter" style="font-family: 'Lobster', cursive;">
     <div class="container-table100">
         <div class="wrap-table100">
             <div class="table100">
-                <h1 style="text-align: center; font-size: 60px; font-family: 'Lobster', cursive;" >Bài đã đăng</h1>
+                <h1 style="text-align: center; font-size: 60px; font-family: 'Lobster', cursive; padding-top: 50px" >Bài đã đăng</h1>
                 <br>
                 <table>
                     <thead>
