--- a/views/member/post.ejs
+++ b/views/member/post.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/assets/css/mainpost.css">
 <div class="container-contact100" style="font-family: 'Lobster', cursive;">
     <div class="wrap-contact100">
         <form class="contact100-form validate-form" method="post" action="<%= locals.post ? '/editpost/' + post._id : '/post' %>" enctype="multipart/form-data">
