--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
   <div class="container">
     <h2 class="text-uppercase text-center text-white">tdmu</h2>
     <hr class="star-light mb-5" >
-    <div class="row">
+    <div class="row" style="font-family: 'Quicksand', sans-serif; font-weight: Medium;">
       <div class="col-lg-4 ml-auto">
         <p class="lead">Chào mừng các cậu đã đến với Confession của Thủ Dầu Một University! Chỉ có vậy thôi, chẳng có gì đặc sắc hơn đâu, lướt chỗ khác đi :v</p>
       </div>
@@ -74,7 +74,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Hồ cá</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-1.jpg">
-              <p class="mb-5">Mô tả 1 x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 1 x3.14!!</p>
             </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">vườn học tập</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-2.jpg">
-              <p class="mb-5">Mô tả 2x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 2x3.14!!</p>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Hành lang</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-3.jpg">
-              <p class="mb-5">Mô tả 3x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 3x3.14!!</p>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Lối đi</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-4.jpg">
-              <p class="mb-5">Mô tả 4x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 4x3.14!!</p>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Sân trường 1</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-5.jpg">
-              <p class="mb-5">Mô tả 5x4.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 5x4.14!!</p>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-uppercase text-secondary mb-0">Sân trường 2</h2>
               <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/hinh-6.jpg">
-              <p class="mb-5">Mô tả 6x3.14!!</p>
+              <p class="mb-5" style="font-family: 'Quicksand', sans-serif; ">Mô tả 6x3.14!!</p>
             </div>
           </div>
         </div>
